2023-04-28  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha03: Smoker';git push
	git tag -a 5.1.6-alpha03 -m 'ncclimo: --split, --stdin docs; ncremap: use flg_hrz_mrv and ncr_idx_in/out to set xtr flg for hyb, dpt_3D';git push --tags

	* Tidy man pages

	* ncclimo/ncremap reveal --npo option to users in help message

2023-04-27  Charlie Zender  <zender@uci.edu>

	* Name-generation algorithm for EAMxx works if caseid is supplied as any full filename

2023-04-25  Charlie Zender  <zender@uci.edu>

	* Change Chrysalis build procedure to use Anaconda gcc/g++ to workaround unresolved function link error in new libicuuc library

2023-04-12  Charlie Zender  <zender@uci.edu>

	* nco.texi update documentation to reflect --split and --stdin changes from 5.0.4

2023-04-11  Charlie Zender  <zender@uci.edu>

	* ncclimo: emit deprecation ERROR and HINT when invoked with --stdin

2023-04-10  Charlie Zender  <zender@uci.edu>

	* Improve pressure bounds check to account for missing values in dpt_3D grids

	* configure.ac use clang++ -std=c++14 to avoid deprecated std::binary_operator error with default -std=c++17 in Clangv16

	* Henry patched NCO (NcapVector.hh) to avoid using std::binary_operator

	* Replace #if 0 with #if false

2023-04-09  Charlie Zender  <zender@uci.edu>

	* Implement correct pressure bounds check for input dpt_3D grids with arbitrary flg_hrz_mrv and ncr_idx_in

	* Diagnose rather than assume whether input/output hybrid coordinates increase or decrease in index (not geometric) space

2023-04-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.1.6-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha02: Indictment Excitement';git push
	git tag -a 5.1.6-alpha02 -m 'all: fix NCZarr overwrite/removal;	ncremap cpl dmn, tms prs, non-spatial lrv';git push --tags

	* ncremap support non-spatial dimensions (temporal, spectral, chemical) for all vertical grid types
