@@ -1,8 +1,12 @@
-2023-04-28  Charlie Zender  <zender@uci.edu>
+2023-05-03  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.1.6-alpha03 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.1.6-alpha03: Smoker';git push
 	git tag -a 5.1.6-alpha03 -m 'ncclimo: --split, --stdin docs; ncremap: use flg_hrz_mrv and ncr_idx_in/out to set xtr flg for hyb, dpt_3D';git push --tags
+
+	* ncremap allow missing values, hrz/vrt dimension ordering, ncr/dcr monotonicity when computing min/max values for dpt_3d fields
+
+2023-04-28  Charlie Zender  <zender@uci.edu>
 
 	* Tidy man pages
 
